fix overflow

--- a/src/scss/components/Box.scss
+++ b/src/scss/components/Box.scss
@@ -13,7 +13,6 @@
     color: $color-tittle;
     margin-bottom: 30px;
     text-align: center;
-    overflow: scroll;
   }
   &__back {
     font-family: $body;
